--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,7 @@
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
     "openai": "^5.15.0"
-  }
+  },
+  "description": "",
+  "main": "server.js"
 }
